# ai-switch

./: .gitignore  PROGRESS.md  REPORT_PHASE1.md  config.toml.example
app/: Cargo.toml
app/src/: logs_panel.rs  main.rs  menu.rs  model_card.rs  preferences.rs  window.rs
core/: 2026-07-21-154413-read-masterplanmd-first-in-full-before-doing.txt  2026-07-21-172350-read-masterplanmd-first-in-full-before-doing.txt  Cargo.toml
core/examples/: cli.rs
core/src/: config.rs  health_monitor.rs  lib.rs  process_manager.rs  proxy.rs  reconciler.rs  single_instance.rs
core/tests/: integration.rs  integration_tests.toml
test/: model-a.sh  model-b.sh
