[package]
name = "ai-switch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ai-switch"
path = "src/main.rs"

[dependencies]
ai-switch-core = { path = "../core" }
gtk4 = "0.9"
glib = "0.20"
gio = "0.20"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["blocking"] }
serde_json = "1"
toml = "0.8"
